--- a/css/shopcar.css
+++ b/css/shopcar.css
@@ -131,27 +131,491 @@ img{
 /*购物车*/
 .shopcar{
 	width:100%;
+	margin-top:40px;
+	background:white;
+	overflow: hidden;
 }
 .shopcar1{
 	width:1190px;
-	height:600px;
-	background:pink;
+	/*height:600px;*/
 	margin:0 auto;
+	margin-bottom: 20px;
+	overflow: hidden;
 }
 .shopcar2{
 	width:1190px;
-	
+	margin-bottom:20px;	
+	margin-top:10px;	
+}
+.shopcar2::after{
+	display: block;
+	content:"";
+	height:0;
+	clear: both;
+	visibility: hidden;	
 }
 .shopcar2 .shopcarimg{
 	float:left;
 	width:35px;
 	height:30px;
+	margin-right:10px;
 	background: url(../img/33.png) no-repeat;
 	background-position: -453px -76px;
 }
 .shopcar3{
 	font-size:23px;
-	font-weight:600;
+	font-weight:100;
 	color:#333333;
 	float:left;
+}
+.goods{
+	clear:both;
+	width:95%;
+	/*background: red;*/
+	/*overflow: hidden;*/
+	margin:0 auto;	
+}
+.goods1 span{
+	font-size:14px;
+	color:black;
+}
+.goods_q3{
+	margin-right:20%;
+	margin-left: 10%;	
+}
+.goods_q4{
+	margin-right:15%;	
+}
+.goods_q5{
+	margin-right:15%;	
+}
+.goods_q6{
+	margin-right:15%;
+}
+.goods_a2{
+	display:block;
+	text-align:center;
+	/*float:left;*/
+}
+.goods2{
+	width:100%;
+	/*background:red;*/
+	overflow: hidden;
+	/*height:100px;*/
+}
+.goods2_c1{
+	overflow: hidden;
+}
+
+.goods2_c3{
+	float:left;
+	margin-top:40px;
+	margin-right:10px;
+}
+.goods2_c4 img{
+	width: 40px;
+	height:80px;
+	float:left;
+	margin-top:10px;
+	margin-right:70px;	
+}
+.goods2_c2 p{
+	float:left;
+	margin-top:40px;
+	margin-right:17%;	
+}
+.goods2_c5{
+	/*width:100px;*/
+	float:left;
+	margin-top:40px;
+}
+.goods2_c6{
+	float:left;
+	margin-left:13%;
+	margin-top:40px;		
+}
+.reduce,.add{
+	float:left;
+	width:20px;
+	height:20px;
+	background:#8B9395;
+	text-align: center;
+	margin-right:5px;
+}
+.number{
+	float:left;	
+	margin-right:5px;	
+}
+.goods2_c7{
+	float:left;
+	margin-left:12%;
+	margin-top:40px;
+}
+.goods2_c8{
+	float:left;
+	margin-left:14%;
+	margin-top:40px;
+	/*position:relative;*/
+}
+.remove{
+	display:block;
+	width:40px;
+	height:20px;
+	text-align: center;
+	background: #8B9395;
+	border-radius: 5px;
+}
+.isremove{
+	position: absolute;
+	width: 170px;
+	height:80px;
+	background: #F8F8FF;
+	left: 50%;
+	top: 40%;
+	border-radius:2px;
+	display: none;
+}
+.isremove p{
+	width: 160px;
+	color: black;
+	font-size: 16px;
+	line-height: 30px;
+	text-align: center;
+	margin-bottom:30px;
+}
+.ok{
+	float: left;
+}
+.no{
+	float: right;
+}
+.shopcar_s1{
+	width: 100px;
+	/*height: 200px;*/
+	margin: 0 auto;
+	display: none;
+}
+.shopcar_s1{
+	margin-top:50px;
+	width: 400px;
+	color: black;
+	font-size: 20px;
+	line-height: 60px;
+	text-align: center;	
+}
+.pay{
+	width: 100%;
+	overflow: hidden;
+	padding-left: 900px;
+	/*background: pink;*/
+}
+.pay p{
+	float: left;
+}
+.pay p:nth-of-type(1){
+	color: #333;
+	font-size: 16px;
+	line-height: 30px;
+}
+.pay span{
+	color: red;
+}
+.pay p:nth-of-type(2){
+	width: 100px;
+	height: 30px;
+	text-align: center;
+	color: white;
+	font-size: 16px;
+	line-height: 30px;
+	background: orangered;
+	margin-left: 30px;
+}
+/*第二部分*/
+.pinpai{
+	width:100%;
+	background: white;
+	margin-bottom:1px;
+}
+.tuihuo{
+	display:block;
+}
+.baoz{
+	display:block;
+	width:46px;
+	height:46px;
+	float:left;
+	margin-right:10px;
+	background-image: url(../img/33.png);
+	background-position:0 -60px;
+}
+.sever{
+	float:left;
+	margin-right:170px;
+}
+.sever span{
+	color:#797876;
+	font-size:16px;
+	display:block;
+}
+.box1{
+	overflow: hidden;
+	width:1198px;
+	margin:0 auto;
+	/*background: red;*/
+	clear:both;
+	padding:42px 0;
+
+}
+.t1{
+	float:left;
+}
+.sever:hover span{
+	color:#ee4122;
+}
+/*详细信息*/
+.about_g{
+	width:100%;
+	background:white;
+}
+.about{
+	width:1198px;
+	margin:0 auto;
+	height:290px;
+	padding-top:40px;	
+}
+.about_jin li a{
+	color:#787974;
+	font-size:12px;
+	line-height: 33px;
+}
+.about_jin li:nth-child(1) a{
+	color:#74756f;
+	font-size:16px;
+	font-weight:600;
+}
+.about_jin{
+	margin-right:125px;
+	float:left;
+}
+.about_jin li a{
+	display:block;
+}
+.j1 .xinl a span:nth-child(1){
+	width:24px;
+	height:24px;
+	float:left;
+	margin-right:5px;
+	background:url(../img/33.png);
+	background-position:-377px -65px;
+}
+.j1 .xinl a span:nth-child(2){
+	float:left;
+}
+.j1 li a:hover span:nth-child(1){
+	background-position:-377px -90px;	
+}
+.j1 li a:hover span{
+	color:#ee4122;
+}
+.j1 .t11 a span:nth-child(1){
+	background-position:-404px -65px;
+}
+.j1 .t11 a:hover span:nth-child(1){
+	background-position:-404px -90px;
+}
+.j1 .t12 a span:nth-child(1){
+	background-position:-429px -65px;
+}
+.j1 .t12 a:hover span:nth-child(1){
+	background-position:-429px -90px;
+}
+.about_jin li:hover a{
+	color:#ee4122;
+}
+.about_jin li:first-child:hover a{
+	color:#74756f;
+	/*color:#ee4122;*/
+}
+.weixin{
+	float: left;
+}
+.weixin li:nth-child(1) span{
+	width:102px;
+	height:102px;
+	border:2px solid #cccccc;
+	float:left;
+	margin-bottom:10px;
+	background:url(../img/33.png);
+	background-position:-276px 0px;
+}
+.weixin li:nth-child(2) span{
+	clear:both;
+	display:block;
+	font-size:12px;
+	color:#979797;
+	margin-left:13px;
+}
+/*footer*/
+.footer{
+	width:100%;
+	/*height:157px;*/
+	background: #333333;
+}
+.footer_w1{
+	width:1198px;
+	margin:0 auto;
+}
+
+.map_first{
+	float: left;
+}
+.map_first a{
+	color:#9a9a9a;
+	font-size:12px;
+	line-height: 42px;
+	padding-right:10px;
+	border-right:1px solid #9a9a9a;	
+}
+.map_first a:hover{
+	color:white;	
+}
+.map{
+	padding-top:10px;
+	/*overflow: hidden;*/
+}
+.map .map_second{
+	height:22px;
+	float: left;
+}
+.map_three{
+	width:98px;
+	height:22px;
+	font-size:12px;
+	margin-left:5px;
+	margin-top:13px;
+	border-radius:3px;
+	position: relative;
+}
+
+.map_t_li{
+	width:98px;
+	position: absolute;
+	left: 0;
+	top: 22px;
+	font-size:12px;
+	line-height:22px;
+	display: none;
+	/*background:#474747;*/
+	z-index: 3;
+}
+.map_three:hover{
+	background:#474747;
+}
+.map_three:hover .map_t_li{
+	background:#474747;
+}
+.map_three:hover .small{
+	transform:rotateZ(180deg);
+	transform-origin:center top;
+	transition:all 0.5s;
+}
+.map_three li{
+	clear:both;
+	color:#9a9a9a;
+	margin-left:5px;
+		
+}
+.map_three .small{
+	display:block;
+	float:right;
+	width:0;
+	height:0;
+	margin-top:9px;
+	margin-right:5px;
+	border:5px solid transparent;
+	border-top:5px solid #9a9a9a;
+}
+.footer_w2{
+	clear:both;
+}
+.footer_w2 .dianxi{
+	font-size:12px;
+	color:#9a9a9a;
+	/*position:absolute;*/
+	
+}
+.footer_w2 .dianxi a{
+	color:#9a9a9a;
+}
+.footer_w2 .dianxi a:hover{
+	color:white;
+}
+.footer_w3 a:nth-child(1) img{
+	vertical-align: middle;
+	margin-right: 8px;
+}
+.footer_w3 a:nth-child(2) img{
+	width:33px; 
+	height:45px;
+	vertical-align: middle;
+	margin-right: 8px;
+}
+.footer_w3 a:nth-child(3) img{
+	 width:120px;
+	 height:45px;
+	vertical-align:middle;
+	 margin-right:8px; 
+}
+
+.footer_w5{
+	/*clear:both;*/
+	width:102px;
+	/*height:48px;*/
+	background: #464646;
+	float: right;
+	text-align: center;
+	position: relative;
+}
+.footer_w5 a{
+	color:#9a9a9a;
+	width:102px;
+	height:24px;
+	display: block;
+	line-height:25px;	
+}
+.footer_w5 .English{
+	/*display: none;*/
+	visibility: hidden;
+	background: #474747;
+	position: absolute;
+	left: 0;
+	top: -20px;
+	z-index: 3;
+	transition: all 0.5s;
+}
+.footer_w5 .English_hide{
+	/*display: block;*/
+	visibility: visible;
+}
+.footer_w5 a span{
+	/*display:bolck;*/
+	font-weight:600;
+}
+.footer_w5 a .jianspan{
+	display:none;
+}
+.footer_w5:hover .addspan{
+	display:none;
+}
+.footer_w5:hover .jianspan{
+	display:inline-block;
+}
+.footer_w5:hover .English{
+	color:white;
+}
+.footer_w4{
+	font-size:12px;
+	color:#9a9a9a;
+	margin-top:20px ;
+	padding-bottom:40px;	
 }
